# project-template-python

./: LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bugs.yaml  config.yml  documentation.yaml  feature_request.yaml
.github/workflows/: ci_docs.yml  ci_lint.yml  ci_lock.yml  ci_sonar.yml  ci_test.yml  pypi.yml  test.yml  wheel.yml
docs/: api.rst  conf.py  index.rst
docs/_static/: theme.css
docs/dev/: index.rst
docs/setup_guide/: index.rst
docs/user_guide/: index.rst
src/my_lib/: __init__.py  version.py
tests/: test_my_lib.py
